# slash-step

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  travis_build.py
.github/workflows/: main.yml
.tox/py26/: .tox-config1
.tox/py27/: .tox-config1
.tox/py27/lib/python2.7/: distutils
.tox/py33/: .tox-config1
.tox/pypy/: .tox-config1  include
.tox/pypy/lib-python/2.7/: UserDict.py  _abcoll.py  _weakrefset.py  abc.py  codecs.py  copy_reg.py  encodings  fnmatch.py  genericpath.py  linecache.py  locale.py  ntpath.py  orig-prefix.txt  os.py  posixpath.py  re.py  sre.py  sre_compile.py  sre_constants.py  sre_parse.py  stat.py  traceback.py  types.py  warnings.py
.tox/pypy/lib_pypy/: readline.py
slash_step/: __version__.py
slash_step.egg-info/: SOURCES.txt
tests/: conftest.py  test__step.py
