[metadata]
name = slash_step
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
summary = A more granular sub STEP for slash tests
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Omer Gertel
author_email = omer.gertel@gmail.com
url = https://github.com/getslash/slash-step
version = 0.9.1

[extras]
testing =
    unittest2; python_version=='2.7'
    pylint~=1.7.0; python_version=='2.7'
    pylint~=2.3.1; python_version>='3.6'
    astroid~=2.2.5; python_version>='3.6'
    pytest

[tool:pytest]
testpaths = tests